# ntpu-past-exam-service

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tatus
auth/: dependencies.py
sql/: database.py
