# pyproject.toml
[project]
name = "ntpu-past-exam-service"
version = "0.1.0"
description = ""
authors = [
    {name = "david", email = "f312213213david@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
    "sqlalchemy>=2.0.23",
    "load-dotenv>=0.1.0",
    "mysql-connector-python>=8.2.0",
    "alembic>=1.12.1",
    "boto3>=1.29.6",
    "urllib3>=1.25.4,<1.27",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-jose>=3.3.0",
    "beautifulsoup4>=4.12.2",
    "logtail-python>=0.2.7",
    "gunicorn>=21.2.0",
    "fastapi-cache2[redis]>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.2",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["auth", "bulletins", "courses", "departments", "posts", "users", "utils", "static_file"]


[tool.uv]
dev-dependencies = [
    "pylint>=3.0.2",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
